--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arinc_429"
-version = "0.1.1"
+version = "0.1.2"
 
 
 authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
@@ -20,4 +20,5 @@ serde = { version = "^1.0.0", optional = true, features = ["derive"] }
 serde_test = "^1.0.0"
 
 [features]
-default = []
+std = []
+default = ["std"]
