--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arinc_429"
-version = "0.1.2"
+version = "0.1.3"
 
 
 authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/samcrow/arinc_429.rs"
 
 
-description = "Types for ARINC 429 communication"
+description = "Types and constants for ARINC 429 communication"
 keywords = ["ARINC", "avionics"]
 categories = ["no-std"]
 
